# learn_rust_official_book

./: README.md
data_type/src/: main.rs
guessing_game/src/: main.rs
learn_closure/src/: main.rs
learn_enum/src/: main.rs
learn_genericity/: Cargo.toml
learn_genericity/src/: main.rs
learn_hashmap/src/: main.rs
learn_if_let/: Cargo.toml
learn_if_let/src/: main.rs
learn_iterator/src/: main.rs
learn_life_time/: Cargo.toml
learn_life_time/src/: main.rs
learn_option_match/: Cargo.toml
learn_option_match/src/: main.rs
learn_package_path/: Cargo.toml
learn_package_path/src/: lib.rs  main.rs
learn_package_path/src/category/: info.rs
learn_panic/: Cargo.toml
learn_panic/src/: main.rs
learn_publish_config/: Cargo.toml
learn_publish_config/src/: lib.rs
learn_result/src/: main.rs
learn_smart_pointer/: Cargo.toml
learn_smart_pointer/src/: main.rs
learn_string/src/: main.rs
learn_struct/src/: main.rs
learn_test/src/: lib.rs
learn_trait/src/: lib.rs  main.rs
learn_vector/src/: main.rs
minigrep/: poem.txt
minigrep/src/: lib.rs  main.rs
